Python-Tutorial/test.output
  File "<stdin>", line 1
    3 little
           ^
SyntaxError: invalid syntax
